# spin-cloud-gpu

./: .gitignore  Cargo.toml  MAINTAINERS.md  README.md  create_plugin.sh
.github/workflows/: release.yaml
.plugin-manifests/: .spin-plugin.json.tmpl  generate-manifest.sh  plugin-spin-compat.txt
cloud-gpu/: package-lock.json  spin.toml
cloud-gpu-app/: package.json  spin.toml
cloud-gpu-app/src/: index.ts
cloud-gpu/src/: index.ts
fermyon-cloud-gpu/: README.md  package-lock.json  package.json  spin.toml
fermyon-cloud-gpu/src/: index.ts
src/: cloud_gpu_info.rs  main.rs
